tests/snapshots/nested_vectors-3.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: false
snapshot_kind: text
---
vec_of_vecs[0]=&
vec_of_vecs[1]=&
vec_of_options[0]=&
option_vec=
