tests/snapshots/nested_vectors-4.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: true
snapshot_kind: text
---
vec_of_vecs%5B0%5D=&
vec_of_vecs%5B1%5D=&
vec_of_options%5B0%5D=&
option_vec=
