tests/snapshots/nested_vectors@form-2.snap
---
source: tests/test_roundtrip.rs
description: "NestedVectors { vec_of_vecs: [[], []], vec_of_options: [Some(\"\")], option_vec: Some([]) }"
---
vec_of_vecs%5B0%5D=&
vec_of_vecs%5B1%5D=&
vec_of_options%5B0%5D=&
option_vec=
