tests/snapshots/nested_vectors@form.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
snapshot_kind: text
---
vec_of_vecs%5B0%5D%5B0%5D=1&
vec_of_vecs%5B0%5D%5B1%5D=2&
vec_of_vecs%5B1%5D=&
vec_of_vecs%5B2%5D%5B0%5D=3&
vec_of_vecs%5B2%5D%5B1%5D=4&
vec_of_vecs%5B2%5D%5B2%5D=5&
vec_of_options%5B0%5D=first&
vec_of_options%5B1%5D&
vec_of_options%5B2%5D=third&
option_vec%5B0%5D=10&
option_vec%5B1%5D=20&
option_vec%5B2%5D=30
