tests/snapshots/nested_vectors@query-2.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
snapshot_kind: text
---
vec_of_vecs[0]=&
vec_of_vecs[1]=&
vec_of_options[0]=&
option_vec=
