tests/snapshots/newtype_structs-2.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: true
snapshot_kind: text
---
id=12345&
name=alice&
email=alice%40example.com&
age=25
